[package]
name = "pt_ref"
version = "0.1.0"
authors = ["Guillaume Pinot <texitoi@texitoi.eu>"]

[dependencies]
combine = "4"
structopt = "0.3"
failure = "0.1"
transit_model = "0.54"
typed_index_collection = "2"
relational_types = "2"
serde_json = "1"
serde = "1"
humantime = "2"
strum = "0.24"
strum_macros = "0.24"

[profile.dev]
opt-level = 1
codegen-units = 16

[profile.release]
opt-level = 3
debug = true
lto = true
codegen-units = 1
panic = 'unwind'